--- a/css/variables.css
+++ b/css/variables.css
@@ -6,7 +6,7 @@
     --max-width: 1920px;
     --max-height: 1080px;
     --min_section_height: 500px;
-    --otaku: Otaku;
+    --otaku: Otaku, Arial, Helvetica, sans-serif;
     --section-font-size: 20px;
     --section_height: 50vh;
     --section_image_margin: 2.5%;
