Mobile design tweaks

--- a/css/index.css
+++ b/css/index.css
@@ -367,6 +367,7 @@ The orange "here" in one of the accordion's answers */
 
 #skills li:last-child {
   flex-grow: 9;
+  height: 0;
 }
 
 #skills > ul > li > img  {
